--- a/index.html
+++ b/index.html
@@ -44,31 +44,45 @@
     </div> 
 
     <div id = "one" class="container">
-        <div class = "section-title">[SAE-01: Réaliser un développment d'application]</div>
+        <div class = "section-title">[SAE-01: Réaliser un développement d'application]</div>
         <div class="carousel">
             <div class="carousel-inner">
                 <input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden="" checked="checked">
                 <div class="carousel-item">
                     <img src="LoopHeroLogo.png">
                     <div class="textzone">
-                        <h2>Loop Hero</h2>
-                        <p>Loop Hero is a game fnoefnbefezfbefeofbezofbefefboezfbezfbezfbezfbezfboezbfezbfezbfozebfezbfezofezfbezofezbfoezbfeozfbezfezfbefezbfjezbfjezofbezj</p>
+                        <h2 style="font-size: 40px ; text-align:center; color: var(--main-color)">Loop Hero</h2>
+                        <p> &nbsp &nbsp &nbsp Loop Hero is a rogue-lite game based on the use of cards. The player have to position enemies, buildings and obstacles in the hero's path during his expedition and find the right balance so that he can survive and win a maximum of loot.
+                            <br>
+                            The aim of our school project was to make a simplified copy of this game in pairs using only Java.
+                        </p>
+                        <a href="nav.html">
+                            <div class="panel pink">
+                            <button>En savoir plus</button>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <input class="carousel-open" type="radio" id="carousel-2" name="carousel" aria-hidden="true" hidden="">
                 <div class="carousel-item">
-                    <img src="http://fakeimg.pl/2000x800/DA5930/fff/?text=JavaScript">
+                    <img e src="LogoEcoScan.png">
+                    <div class="textzone">
+                        <h2 >Eco Scan</h2>
+                        <p></p>
+                    </div>
                 </div>
                 <input class="carousel-open" type="radio" id="carousel-3" name="carousel" aria-hidden="true" hidden="">
                 <div class="carousel-item">
                     <img src="http://fakeimg.pl/2000x800/F90/fff/?text=Carousel">
                 </div>
+                <!--PERMET D'AFFICHER LES CONTROLES ET BOUTONS DE NAVIGATION-->
                 <label for="carousel-3" class="carousel-control prev control-1">‹</label>
                 <label for="carousel-2" class="carousel-control next control-1">›</label>
                 <label for="carousel-1" class="carousel-control prev control-2">‹</label>
                 <label for="carousel-3" class="carousel-control next control-2">›</label>
                 <label for="carousel-2" class="carousel-control prev control-3">‹</label>
                 <label for="carousel-1" class="carousel-control next control-3">›</label>
+                <!--bouton de navigation en bas-->
                 <ol class="carousel-indicators">
                     <li>
                         <label for="carousel-1" class="carousel-bullet">•</label>
