--- a/index.html
+++ b/index.html
@@ -67,8 +67,18 @@
                 <div class="carousel-item">
                     <img e src="LogoEcoScan.png">
                     <div class="textzone">
-                        <h2 >Eco Scan</h2>
-                        <p></p>
+                        <h2 style="font-size: 40px ; text-align:center; color: var(--main-color); margin: 0;">Eco Scan</h2>
+                        <p>  
+                            &nbsp &nbsp &nbsp As part of our human machine interface course, we have conceptualized an application in pairs from a given context : <b>ecology</b>.
+                            <br>
+                            EcoScan is based on a simple principle, offering users a scanner allowing them, by scanning a product, to obtain information related to its ecological impact, its origin, and more. As well as possible alternatives to this product.
+                            In addition, the application offers lessons and tips to allow everyone to become aware and learn more about ecology. 
+                        </p>
+                        <a href="nav.html">
+                            <div class="panel pink">
+                            <button>En savoir plus</button>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <input class="carousel-open" type="radio" id="carousel-3" name="carousel" aria-hidden="true" hidden="">
