--- a/index.html
+++ b/index.html
@@ -44,20 +44,20 @@
     </div> 
 
     <div id = "one" class="container">
-        <div class = "section-title">[SAE-01: Réaliser un développement d'application]</div>
+        <div class = "section-title">♦ SAE-01: Réaliser un développement d'application ♦</div>
         <div class="carousel">
             <div class="carousel-inner">
                 <input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden="" checked="checked">
                 <div class="carousel-item">
                     <img src="LoopHeroLogo.png">
                     <div class="textzone">
-                        <h2 style="font-size: 40px ; text-align:center; color: var(--main-color)">Loop Hero</h2>
+                        <h2 >Loop Hero</h2>
                         <p> &nbsp &nbsp &nbsp Loop Hero is a rogue-lite game based on the use of cards. The player have to position enemies, buildings and obstacles in the hero's path during his expedition and find the right balance so that he can survive and win a maximum of loot.
                             <br>
                             The aim of our school project was to make a simplified copy of this game in pairs using only Java.
                         </p>
                         <a href="nav.html">
-                            <div class="panel pink">
+                            <div class="panel green">
                             <button>En savoir plus</button>
                             </div>
                         </a>
