--- a/EcoScan.html
+++ b/EcoScan.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="more.css">
-    <title>LoopHero</title>
+    <title>EcoScan</title>
 </head>
 <body>
     <div class = "header">
@@ -16,20 +16,22 @@
     </div>
 
     <div class = "central">
-        <h1>♦LoopHero♦</h1>
+        <h1>♦EcoScan♦</h1>
         <div class="container">
             <h2>Introduction</h2>
-            <p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbspDans le cadre de la SAE-01: Réaliser un développement d'application, nous avons en binôme <a href="https://berachem.dev/">(avec Berachem Markria)</a> développé entièrement dans le langage Java le jeu "Loop-Hero". Loop Hero est un jeu de type rogue-like basé sur l'utilisation de cartes. Le joueur doit placer des ennemis, des bâtiments et des obstacles sur le chemin du héros pendant son expédition et trouver le bon équilibre pour qu'il puisse survivre et gagner un maximum de butin.
-                Ainsi, pour reproduire une copie simplifiée de ce jeu, nous avons repris les données du jeu sur le wiki de Loop Hero et utilisé les indications du sujet fournis.
+            <p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbspDans le cadre de la SAE-01: Réaliser un développement d'application, nous avons en binôme <a href="https://berachem.dev/">(avec Lucas Leveque)</a> conçu et prototypé une application nommée "EcoScan", autour d’un contexte fourni:  <b>l'écologie</b> . 
+                Notre application est basée sur un principe simple, proposer aux utilisateurs un scanner, permettant en scannant un produit d’obtenir des informations liées à son impact écologique, sa provenance, etc… Ainsi que des alternatives possibles à ce produit.
+                De plus, l'application propose des leçons et astuces afin de permettre à chacun de se sensibiliser et d’en apprendre plus sur l’écologie. Cet apprentissage peut se poursuivre via un forum.                
             </p>
-            <p>Ce projet a été réalisé en 3 phases, en voici les détails ci-dessous.</p>
+            <p>Ainsi, les objectifs principaux de l'applications sont d'offrir à chacun un moyen facile, rapide et accessible d’agir pour la planète sans changer leurs habitudes quotidiennes.</p>
+            <p>Voici ci-dessous les différentes étapes de notre projet, dans le cadre de notre cours d'IHM.</p>
 
-            <h2>♦Phase 1♦</h2>
-            <p>Cette première phase consitait à avoir les bases du jeu avec des éléments de jeu fonctionnels à implémenter. </p>
+            <h2>♦Analyse du scénario♦</h2>
+            <p>Tout d'abord, nous devions ,à partir d'un contexte donné, construire un scénario précis afin de répondre au enjeux de ce contexte, puis développer en détails ce scénario.</p>
             <div class="image-flex">
                 <figure>
-                    <img src="pictures/LoopHero1.png">
-                    <figcaption>img.1 Base du jeu</figcaption>
+                    <img src="pictures/Brainstorming.png">
+                    <figcaption>Brainstorming</figcaption>
                 </figure>
                 <figure>
                     <img src="pictures/LoopHero2.png">
