--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             
             <div style = "padding-left: 30%;padding-top: 15%; font-size: 2vw;" class = "sub-title">View my work!</div>
-            <a href="#one" class="scroll-down-link scroll-down-arrow" data-iconfont="ETmodules" data-icon></a> 
+            <a href="#one" class="scroll-down-link scroll-down-arrow" data-iconfont="ETmodules" data-icon><img src="pictures/down-arrow.png"></a> 
         </div>
         <img style="padding-right: 0;" src="pictures/frog-removebg-preview.png">
     </div> 
@@ -147,7 +147,7 @@
                
                 <input class="carousel4-open" type="radio" id="carousel4-2" name="carousel4" aria-hidden="true" hidden="">
                 <div class="carousel4-item">
-                    <img style ="width:35vw ;height:auto ;" src ="pictures/cimetiere.png">
+                    <img style ="width:35vw ;height:auto ;" src ="pictures/Cimetiere.png">
                     <div class="textzone">
                         <h2>"Cimetière" project</h2>
                         <p>  
@@ -155,7 +155,7 @@
                             All this by conceptualizing the database in relational database. Then by creating the tables under mySQL, by inserting an exploitable data sample.
                             And finally, by conceptualizing a web site that exploits the database by implementing the web site with php. 
                         </p>
-                        <a href="EcoScan.html">
+                        <a href="Cimetiere.html">
                             <div class="panel green">
                             <button>More about</button>
                             </div>
