page d'acceuil finie!

--- a/Cimetiere.html
+++ b/Cimetiere.html
@@ -19,7 +19,7 @@
         <h1>♦Cimetière♦</h1>
         <div class="container">
             <h2>Introduction</h2>
-            <p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbspDans le cadre de la SAE-04: Gérer des données de l’information , nous avons en binôme <a href="https://perso-etudiant.u-pem.fr/~lucas.leveque/Portfolio/">(avec Lucas Leveque)</a> conçu et développé une base de données permettant à une municipalité de gérer son cimetière. 
+            <p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbspDans le cadre de la SAE-04: Gérer des données de l’information , nous avons en binôme <a target="_blank" href="https://perso-etudiant.u-pem.fr/~lucas.leveque/Portfolio/">(avec Lucas Leveque)</a> conçu et développé une base de données permettant à une municipalité de gérer son cimetière. 
                 
             </p>
             <p>Le but est de créer et concevoir cette base de données de A à Z jusqu'à obtenir une interface web utilisable.</p>
@@ -72,24 +72,39 @@
             <div class="image-flex">
                 <figure>
                     <img src="pictures/acceuilcim.png">
-                    <figcaption>Page d'acceuil publique</figcaption>
+                    <figcaption>img.1 Page d'acceuil publique</figcaption>
                 </figure>
                 <figure>
                     <img src="pictures/estimation.png">
-                    <figcaption>Modèle Logique des Données</figcaption>
+                    <figcaption>img.2 Modèle Logique des Données</figcaption>
                 </figure>
                 <figure>
                     <img src="pictures/inscriptionbdd.png">
-                    <figcaption>Remplissage des tables</figcaption>
+                    <figcaption>img.3 Remplissage des tables</figcaption>
+                </figure>
+                <figure>
+                    <img src="pictures/concessionclient.png">
+                    <figcaption>img.4 Information sur les concessions d'un client</figcaption>
+                </figure>
+                <figure>
+                    <img src="pictures/concessiongestionnaire.png">
+                    <figcaption>img.5Gestion des concessions du gestionnaire</figcaption>
                 </figure>
             </div>
+
+            <div class="sous-titre">Acceuil</div>
+            <p>Voici la page d'acceuil (en img.1) qui est celle qui apparait pour n'importe quel type d'utilisateur non connecté. On peut rechercher l'emplacement d'un défunt dans le cimetière selon les information que le rentre. De plus, l'utilisateur peut estimer le prix d'une future concession (img.2) en rentrant les caractéristique souhaitée, le résultats dépends des données de la base de données puisque le prix varie en fonction de celles-ci.
+            </p>
+            <div class="sous-titre">Identification: gestionnaire ou client</div>
+            <p>Si l'utilisateurs existe dans la base de données, il peut se connecter (img.3) soit en temps que gestionnaire s'il est enregistré en temps que tel soit en client. S'il n'a pas de compte, il peut s'inscrire en rentrant un nom un prénom et un MDP. Le mot de passe est sécurisé avec le md5.</p>
+            <div class="sous-titre">Concessions</div>
+            <p>Si l'utilisateur connecté est un client, il peut consulter les détails de ses concessions (img.4). Si il est gestionnaire, il a le pouvoir d'insertion et de suppression de données de la base (img.5).</p>
+
             <br>
             <h2 style="text-align: center">Qu'est-ce que ce projet m'a apportée ?</h2>
-            <p> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ce projet est très important afin de comprendre les enjeux de l'expérience et l'interface utilisateur. Cela permet de comprendre que développer une application ne se limite pas à simplément coder mais aussi à privilégier la conception et la rélfexion derrière celle-ci. Pour m'a part ce projet est l'un de mes favoris étant très intéressée par l'ux/ui design, aussi j'ai beaucoup appris sur les méthodes du design thinking. 
-                Enfin, j'ai appris à utiliser l'outil de mockup figma que j'utilise maintenant pour maquetter la plupart de mes projets.
+            <p> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ce projet m'a permise d'apprendre à créer un site dynamique. Grâce à lui, j'ai développé mes compéteences en SQL au niveau de requête plus ou moins complexe mais aussi mes connaissances en PHP. Je sais à présents exploiter les bases de données et comprends les enjeux de la sécurisation des données. Enfin, je suis en mesure de conceptualiser un modèle relationnel de données simple afin de créer une base de données en fonction des besoins utilisateur.
             </p>
 
-            </p> 
         </div>
     </div>
       
