--- a/EcoScan.html
+++ b/EcoScan.html
@@ -19,7 +19,7 @@
         <h1>♦EcoScan♦</h1>
         <div class="container">
             <h2>Introduction</h2>
-            <p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbspDans le cadre de la SAE-01: Réaliser un développement d'application, nous avons en binôme <a href="https://perso-etudiant.u-pem.fr/~lucas.leveque/Portfolio/">(avec Lucas Leveque)</a> conçu et prototypé une application nommée "EcoScan", autour d’un contexte fourni:  <b>l'écologie</b> . 
+            <p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbspDans le cadre de la SAE-01: Réaliser un développement d'application, nous avons en binôme <a target="_blank" href="https://perso-etudiant.u-pem.fr/~lucas.leveque/Portfolio/">(avec Lucas Leveque)</a> conçu et prototypé une application nommée "EcoScan", autour d’un contexte fourni:  <b>l'écologie</b> . 
                 Notre application est basée sur un principe simple, proposer aux utilisateurs un scanner, permettant en scannant un produit d’obtenir des informations liées à son impact écologique, sa provenance, etc… Ainsi que des alternatives possibles à ce produit.
                 De plus, l'application propose des leçons et astuces afin de permettre à chacun de se sensibiliser et d’en apprendre plus sur l’écologie. Cet apprentissage peut se poursuivre via un forum.                
             </p>
@@ -56,7 +56,7 @@
             <br>
             <h2>♦Prototypage♦</h2>
 
-            <p>Voici maintenant des maquettes des écran de l'application que nous avons élaborés à partir du scénario et de nos Personas. Tout à été réalisé à l'aide de l'outil figma, en voici le lien: <a href="https://www.figma.com/community/file/1084511323012734174">Figma</a></p>
+            <p>Voici maintenant des maquettes des écran de l'application que nous avons élaborés à partir du scénario et de nos Personas. Tout à été réalisé à l'aide de l'outil figma, en voici le lien: <a target="_blank" href="https://www.figma.com/community/file/1084511323012734174">Figma</a></p>
             <div class="image-flex">
                 <figure>
                     <img src="pictures/inscription.png">
