--- a/LoopHero.html
+++ b/LoopHero.html
@@ -19,7 +19,7 @@
         <h1>♦LoopHero♦</h1>
         <div class="container">
             <h2>Introduction</h2>
-            <p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbspDans le cadre de la SAE-01: Réaliser un développement d'application, nous avons en binôme <a href="https://berachem.dev/">(avec Berachem Markria)</a> développé entièrement dans le langage Java le jeu "Loop-Hero". Loop Hero est un jeu de type rogue-like basé sur l'utilisation de cartes. Le joueur doit placer des ennemis, des bâtiments et des obstacles sur le chemin du héros pendant son expédition et trouver le bon équilibre pour qu'il puisse survivre et gagner un maximum de butin.
+            <p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbspDans le cadre de la SAE-01: Réaliser un développement d'application, nous avons en binôme <a target="_blank" href="https://berachem.dev/">(avec Berachem Markria)</a> développé entièrement dans le langage Java le jeu "Loop-Hero". Loop Hero est un jeu de type rogue-like basé sur l'utilisation de cartes. Le joueur doit placer des ennemis, des bâtiments et des obstacles sur le chemin du héros pendant son expédition et trouver le bon équilibre pour qu'il puisse survivre et gagner un maximum de butin.
                 Ainsi, pour reproduire une copie simplifiée de ce jeu, nous avons repris les données du jeu sur le wiki de Loop Hero et utilisé les indications du sujet fournis.
             </p>
             <p>Ce projet a été réalisé en 3 phases, en voici les détails ci-dessous.</p>
