--- a/Cimetiere.html
+++ b/Cimetiere.html
@@ -11,8 +11,8 @@
     <div class = "header">
         <div class = "headerElem"><a href="index.html">Home</a></div>
         <div class = "headerElem"><a href="#">Work</a></div>
-        <div class = "headerElem"><a href="#">About</a></div>
-        <div class = "headerElem"><a href="#">Contact</a></div>
+        <div class = "headerElem"><a href="about.html">About</a></div>
+        <div class = "headerElem"><a href="contact.html">Contact</a></div>
     </div>
 
     <div class = "central">
