--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                
                 <input class="carousel4-open" type="radio" id="carousel4-2" name="carousel4" aria-hidden="true" hidden="">
                 <div class="carousel4-item">
-                    <img style ="width:35vw ;height:auto ; margin-bottom:10vh" src ="pictures/Cimetiere.png">
+                    <img style ="width:35vw ;height:auto ; margin-bottom:10vh" src ="pictures/cimetiere.png">
                     <div class="textzone">
                         <h2>"Cimetière" project</h2>
                         <p>  
